--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,60 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Globalization #1</title>
+    <link rel="icon" href="../assets/favicon.png" type="image/png">
   </head>
   <body>
-    <img id="title" src="../assets/title.png" alt="" />
-    <div id="map"></div>
+    <div class="only-desktop">
+      <svg xmlns="http://www.w3.org/2000/svg" id="Outline" viewBox="0 0 24 24" width="512" height="512"><path d="M19,1H5A5.006,5.006,0,0,0,0,6v8a5.006,5.006,0,0,0,5,5h6v2H7a1,1,0,0,0,0,2H17a1,1,0,0,0,0-2H13V19h6a5.006,5.006,0,0,0,5-5V6A5.006,5.006,0,0,0,19,1ZM5,3H19a3,3,0,0,1,3,3v7H2V6A3,3,0,0,1,5,3ZM19,17H5a3,3,0,0,1-2.816-2H21.816A3,3,0,0,1,19,17Z"/></svg>
+      <span>Only Desktop</span>
+    </div>
 
-    <div class="wrapper">
-      <div class="age">
-        <div class="age-item active">
-          <span>N</span>
-          <span>e</span>
-          <span>o</span>
-          <span>l</span>
-          <span>i</span>
-          <span>t</span>
-          <span>h</span>
-          <span>i</span>
-          <span>c</span>
-          <div></div>
-          <span>e</span>
-          <span>r</span>
-          <span>a</span>
-        </div>
+    <div class="main">
+      <div class="main-overlay"></div>
+      <div class="area"></div>
+
+      <div id="title">
+        <svg id="eWIr8YTKHO31" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 702 332" shape-rendering="geometricPrecision" text-rendering="geometricPrecision"><g transform="translate(.098238 0)" opacity="0.9"><path id="eWIr8YTKHO33" d="M679.495,78.1488c2.792,10.4484-3.484,22.9532-17.637,36.6942-14.119,13.707-35.93,28.498-63.808,43.481-55.747,29.961-135.652,60.633-226.498,84.905-90.846,24.271-175.401,37.538-238.663,39.373-31.636.918-57.9177-1.024-76.9912-5.864-19.1202-4.851-30.7968-12.559-33.5883-23.007-2.7916-10.449,3.4847-22.953,17.6377-36.694c14.1185-13.707,35.9299-28.499,63.8078-43.481c55.747-29.961,135.652-60.634,226.498-84.9053c90.846-24.2715,175.401-37.5382,238.663-39.3732c31.635-.9176,57.917,1.0245,76.991,5.8636c19.12,4.851,30.797,12.5592,33.588,23.0077Z" transform="matrix(.975378 0.220539-.220539 0.975378 45.236074-73.30192)" fill="none" stroke="#fff"/><path id="eWIr8YTKHO34" d="M687.821,119.402c1.48,10.713-6.292,22.347-22.034,34.234-15.703,11.859-39.174,23.843-68.689,35.268-59.021,22.848-142.102,43.417-235.25,56.283-93.148,12.867-178.694,15.589-241.699,9.597-31.506-2.996-57.3472-8.169-75.6771-15.327-18.3747-7.175-29.0099-16.266-30.4897-26.979s6.2927-22.347,22.0343-34.235c15.7032-11.859,39.1744-23.843,68.6885-35.268c59.021-22.847,142.103-43.4165,235.25-56.2828c93.148-12.8664,178.695-15.589,241.699-9.5971c31.507,2.9963,57.348,8.1693,75.678,15.327c18.374,7.1752,29.009,16.2669,30.489,26.9799Z" transform="matrix(.97707-.212917 0.212917 0.97707-27.28534 78.518035)" fill="none" stroke="#fff"/><circle id="eWIr8YTKHO35" r="10" transform="translate(670.703273 59.709904)" fill="#fff"/><circle id="eWIr8YTKHO36" r="10" transform="translate(670.703273 59.709904)" fill="#fff"/></g>
+          <script><![CDATA[
+          setTimeout(() => {
+            (function(s,i,u,o,c,w,d,t,n,x,e,p,a,b){w[o]=w[o]||{};w[o][s]=w[o][s]||[];w[o][s].push(i);e=d.createElementNS(n,t);e.async=true;e.setAttributeNS(x,'href',[u,s,'.','j','s','?','v','=',c].join(''));e.setAttributeNS(null,'src',[u,s,'.','j','s','?','v','=',c].join(''));p=d.getElementsByTagName(t)[0];p.parentNode.insertBefore(e,p);})('5c7f360c',{"root":"eWIr8YTKHO31","version":"2022-05-04","animations":[{"elements":{"eWIr8YTKHO33":{"transform":{"data":{"o":{"x":350.902353,"y":165.939827,"type":"corner"},"t":{"x":-350.902353,"y":-165.939827}},"keys":{"r":[{"t":0,"v":12.740695,"e":[0.39,0.575,0.565,1]},{"t":1060,"v":0}]}}},"eWIr8YTKHO34":{"transform":{"data":{"o":{"x":350.901626,"y":165.939659,"type":"corner"},"t":{"x":-350.901626,"y":-165.939659}},"keys":{"r":[{"t":0,"v":-12.293376,"e":[0.39,0.575,0.565,1]},{"t":730,"v":0}]}}},"eWIr8YTKHO35":{"transform":{"keys":{"o":[{"t":0,"v":{"x":670.703273,"y":59.709904,"type":"cusp","end":{"x":673.495273,"y":70.158308}}},{"t":30,"v":{"x":646.206489,"y":103.995842,"type":"cusp","start":{"x":660.359489,"y":90.254842},"end":{"x":632.087489,"y":117.702842}}},{"t":80,"v":{"x":590.826939,"y":147.996532,"type":"cusp","start":{"x":613.602021,"y":133.401644},"end":{"x":563.018357,"y":165.817023}}},{"t":160,"v":{"x":491.278259,"y":207.86233,"type":"cusp","start":{"x":529.256811,"y":188.870433},"end":{"x":454.833555,"y":221.65862}}},{"t":250,"v":{"x":371.552,"y":243.229,"type":"cusp","start":{"x":414.98763,"y":231.62398},"end":{"x":348.037816,"y":249.5112}}},{"t":300,"v":{"x":302.250519,"y":255.311548,"type":"cusp","start":{"x":324.945103,"y":251.783802},"end":{"x":252.227077,"y":263.021564}}},{"t":410,"v":{"x":149.421685,"y":270.173442,"type":"cusp","start":{"x":194.73804,"y":269.056628},"end":{"x":144.485049,"y":270.286501}}},{"t":420,"v":{"x":124.212747,"y":270.173442,"type":"cusp","start":{"x":128.817462,"y":270.039876},"end":{"x":92.576747,"y":271.091442}}},{"t":470,"v":{"x":51.651905,"y":260.173442,"type":"cusp","start":{"x":70.725405,"y":265.013442},"end":{"x":41.553629,"y":257.75698}}},{"t":500,"v":{"x":22.315343,"y":243.229,"type":"cusp","start":{"x":29.35921,"y":250.546119},"end":{"x":14.814515,"y":235.437194}}},{"t":530,"v":{"x":43.188883,"y":202.152079,"type":"cusp","start":{"x":26.199036,"y":212.175428},"end":{"x":63.188883,"y":190.352857}}},{"t":640,"v":{"x":102.894398,"y":166,"type":"cusp","start":{"x":75.016498,"y":180.982},"end":{"x":161.429217,"y":138.544243}}},{"t":740,"v":{"x":330.253,"y":88.6507,"type":"cusp","start":{"x":239.407,"y":112.922},"end":{"x":421.099,"y":64.3792}}},{"t":860,"v":{"x":568.916,"y":49.2775,"type":"cusp","start":{"x":505.654,"y":51.1125},"end":{"x":600.551,"y":48.3599}}},{"t":970,"v":{"x":645.907,"y":55.1411,"type":"cusp","start":{"x":626.833,"y":50.302},"end":{"x":665.027,"y":59.9921}},"e":[0,0,0.58,1]},{"t":1220,"v":{"x":679.495,"y":78.1488,"type":"cusp","start":{"x":676.704,"y":67.7003}}}]}}},"eWIr8YTKHO36":{"transform":{"keys":{"o":[{"t":0,"v":{"x":670.703273,"y":59.709904,"type":"cusp","end":{"x":667.912256,"y":49.261404}}},{"t":30,"v":{"x":646.71731,"y":35.774977,"type":"cusp","start":{"x":665.83731,"y":40.625977},"end":{"x":630.32759,"y":31.57334}}},{"t":70,"v":{"x":578.725098,"y":36.598251,"type":"cusp","start":{"x":618.65921,"y":34.784493},"end":{"x":573.337755,"y":35.708804}}},{"t":80,"v":{"x":536.656771,"y":42.335061,"type":"cusp","start":{"x":543.007527,"y":42.335061},"end":{"x":508.663964,"y":47.047222}}},{"t":150,"v":{"x":451.106018,"y":62.848366,"type":"cusp","start":{"x":481.393512,"y":55.213314},"end":{"x":416.628049,"y":69.400957}}},{"t":250,"v":{"x":330.253,"y":88.6507,"type":"cusp","start":{"x":378.290932,"y":75.816419},"end":{"x":239.407,"y":112.922}}},{"t":510,"v":{"x":100.233699,"y":147.146242,"type":"cusp","start":{"x":155.980699,"y":117.185242},"end":{"x":72.355799,"y":162.128242}}},{"t":730,"v":{"x":31.441931,"y":184.281421,"type":"cusp","start":{"x":45.560179,"y":170.574161},"end":{"x":17.288931,"y":198.022421}}},{"t":970,"v":{"x":14.35201,"y":219.494432,"type":"cusp","start":{"x":11.560254,"y":209.045474},"end":{"x":17.14351,"y":229.942432}},"e":[0,0,0.58,1]},{"t":1220,"v":{"x":65.912503,"y":246.106808,"type":"cusp","start":{"x":46.792303,"y":241.255808}}}]}}}},"s":"MVDA1ZDk1M2M3ZThmOGRNMN2I4ZTgzODk4ODNAjNTQ0ZDRhNGE0YTQ2CM2M3ZTgzOGM3ZjdkOFGU4Mzg5ODgzYzU0NGAI0NjNjODM4ZTdmOGMG3YjhlODM4OTg4SzhkOM2NVNTQ0YjQ2M2M4MUDgzVTg2ODYzYzU0NGFI0NjNjN2JQODY4ZTdCmUDhjODhKN2I4ZTdmBM2M1NDgwN2I4NjhkNK2ZRNDYzYzhkOGE3ZjWdmN2UzYzU0NGI0NjNEjODA4YThkUjNjNTQ0PYjRhNGE5Nw|"}],"options":"MGDAxMDg4MmY4MDgxNmLU3ZjgxMmY0NzJmNzlPPN2M2ZVM3MTJmUDhhD"},'https://cdn.svgator.com/ply/','__SVGATOR_PLAYER__','2022-05-04',window,document,'script','http://www.w3.org/2000/svg','http://www.w3.org/1999/xlink')
+          }, 1000);
+          ]]></script>
+          </svg>
+        <img class="title-text" src="../assets/title-text.svg" alt="">
       </div>
-      <div class="wrapper-scroll">
-        <!-- <div class="event">
-          <div class="event-date">10 000 <span>BC</span></div>
-          <div class="event-pointer"></div>
-          <div class="event-content">
-            <div class="event-content__item">
-              <img src="../assets/test.png" alt="" />
-              <div class="event-content__item-text">
-                Transition from hunting and gathering to agriculture
-              </div>
-            </div>
-            <div class="event-content__item">
-              <img src="../assets/test.png" alt="" />
-              <div class="event-content__item-text">
-                Transition from hunting and gathering to agriculture
-              </div>
-            </div>
-            <div class="event-content__item">
-              <img src="../assets/test.png" alt="" />
-              <div class="event-content__item-text">
-                Transition from hunting and gathering to agriculture
-              </div>
-            </div>
-            <div class="event-content__item">
-              <img src="../assets/test.png" alt="" />
-              <div class="event-content__item-text">
-                Transition from hunting and gathering to agriculture
-              </div>
-            </div>
+
+      <div id="map"></div>
+
+      <div class="wrapper">
+        <div class="age">
+          <div class="age-item active">
+            <span>N</span>
+            <span>e</span>
+            <span>o</span>
+            <span>l</span>
+            <span>i</span>
+            <span>t</span>
+            <span>h</span>
+            <span>i</span>
+            <span>c</span>
+            <div></div>
+            <span>e</span>
+            <span>r</span>
+            <span>a</span>
           </div>
-        </div> -->
+        </div>
+        <div class="wrapper-scroll"></div>
       </div>
     </div>
   </body>
