--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,8 +5,52 @@ body {
   color: white;
   font-family: 'Raleway', sans-serif;
   font-variant-numeric: lining-nums proportional-nums;
+
+  height: 3000px;
+
+  @media screen and (max-width: 1200px) {
+    height: 100vh !important;
+    overflow: hidden;
+  }
+}
+
+.only-desktop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #081133;
+
+  font-size: 24px;
+  font-weight: 600;
+
+  svg {
+    margin-right: 20px;
+    width: 30px;
+
+    path {
+      fill: white;
+    }
+  }
+}
+
+.main {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   min-height: 100vh;
   overflow: hidden;
+
+  @media screen and (max-width: 1200px) {
+    display: none;
+  }
 }
 
 #map {
@@ -16,29 +60,90 @@ body {
   width: 100%;
   height: 100%;
   background-image: url('../assets/map.png');
+  background-size: cover;
+
+  &::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #040e31;
+    opacity: 0.9;
+    pointer-events: none;
+  }
 }
 
 #title {
   position: absolute;
-  top: 0;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
-  z-index: 2;
+  transform: translate(-50%, -50%) scale(1.2);
+  z-index: 101;
+
+  max-width: 600px;
+  width: 30vw;
+
+  .title-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 100%;
+  }
+
+  animation: hideTitle 1s ease 1 forwards;
+  animation-delay: 1s;
+  @keyframes hideTitle {
+    to {
+      top: -5%;
+      transform: translate(-50%, 0) scale(1);
+    }
+  }
+}
+
+.main-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #081133;
+  opacity: 1;
+  z-index: 100;
+  backdrop-filter: blur(5px);
+
+  pointer-events: none;
+
+  animation: hideOverlay 1s ease 1 forwards;
+  animation-delay: 1s;
+  @keyframes hideOverlay {
+    80% {
+      background-color: #08113300;
+    }
+    100% {
+      opacity: 0;
+      background-color: #08113300;
+    }
+  }
 }
 
 .wrapper {
   position: relative;
-  padding-top: 20%;
+  padding-top: 15%;
   overflow: hidden;
   z-index: 2;
 
   &-scroll {
     position: relative;
     display: flex;
+    flex-wrap: nowrap;
+    width: fit-content;
 
     touch-action: none;
     user-select: none;
-    cursor: grab;
   }
 }
 
@@ -46,12 +151,17 @@ body {
   position: relative;
   margin: 0 auto;
   width: 1000px;
-  height: 120px;
+  height: 110px;
 
   user-select: none;
-  font-size: 100px;
+  font-size: 90px;
   font-weight: 700;
   text-transform: uppercase;
+
+  @media screen and (max-width: 1500px) {
+    height: 85px;
+    font-size: 70px;
+  }
 
   opacity: 0.65;
   overflow: hidden;
@@ -86,13 +196,25 @@ body {
     repeat;
 }
 
+.area {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 40vw;
+  height: 100%;
+  background-color: rgba($color: red, $alpha: 0.2);
+  z-index: 100;
+
+  display: none;
+}
+
 .event {
   position: relative;
   z-index: 1;
-  width: 90vw;
-  flex-shrink: 0;
+  flex-shrink: 1;
 
-  margin-left: 200px;
+  margin-left: 30vw;
   &:first-child {
     margin-left: 0;
   }
@@ -130,6 +252,10 @@ body {
     font-weight: 600;
     text-transform: uppercase;
 
+    @media screen and (max-width: 1500px) {
+      font-size: 24px;
+    }
+
     span {
       font-size: 0.6em;
     }
@@ -142,10 +268,30 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     column-gap: 20px;
     row-gap: 30px;
 
     pointer-events: none;
+
+    &__item {
+      flex-shrink: 0;
+      max-width: 400px;
+      width: 40vw;
+
+      img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 8px;
+      }
+
+      &-text {
+        margin-top: 10px;
+        opacity: 0.8;
+        font-weight: 500;
+        line-height: 1.5;
+      }
+    }
   }
 }
